--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,10 +8,11 @@ set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -std=c++11")
 
 #定义参与编译的源代码文件  将当前根目录下的源文件的名字组合起来放到 SRC_LIST 中
-aux_source_directory(. SRC_LIST)
+aux_source_directory(./src SRC_LIST)
 
 #编译生成 动态库mymuduo 
 add_library(mymuduo SHARED ${SRC_LIST})
+
 
 add_library(mymuduo)
 
